# learnkit

./: .gitignore  .prettierrc  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  guide.md  package-lock.json  package.json  vitest.config.js
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-skill.yml  ci-typescript.yml  publish-skill.yml
cli/: Cargo.toml
cli/src/: config.rs  lib.rs  main.rs  scope.rs
cli/src/commands/: answer.rs  info.rs  init.rs  lesson.rs  list.rs  mod.rs  progress.rs  resource.rs  scope.rs
cli/src/db/: lessons.rs  mod.rs  qa.rs  resources.rs  schema.rs  sections.rs
cli/src/server/: ask.rs  error.rs  health.rs  lessons.rs  mod.rs  programs.rs  progress.rs  state.rs
cli/templates/: _template.html  lesson.css  lesson.js  shell.html
cli/tests/: api_test.rs  lesson_render_test.rs
docs/: COMPONENTS.md  DESIGN.md  architecture.md  cli.md  dev-guidelines.md  frontend-design.md  plan.md  skills.md  terminology.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/design/: UI.html  UX.md  app-header-cases.html  components-showcase.html  icon-cases.html  icon-final.html  index.html  lesson-template-a-cases.html  lesson-template-b-cases.html  lesson-template-c-cases.html  program-card-cases.html  progress-status-cases.html  stitch-prompt.md  subject-lesson-cases.html
frontend/src/: App.tsx  index.css
hooks/: hooks.json
skills/learn-answer/: SKILL.md
skills/learn-create/: SKILL.md
skills/learn-prepare/: SKILL.md
skills/learn-research/: SKILL.md
(+22 files in other folders)
